resolved issues with nav toggler not working. fixed scaling issues on images on small displays.

--- a/src/assets/site.css
+++ b/src/assets/site.css
@@ -49,6 +49,10 @@ nav .navbar-brand img {
 #frontpage .introductions .screenshot {
     max-width: 967px;
 }
+#frontpage .introductions .callouts {
+    padding-top: 5rem;
+    padding-bottom: 3rem;
+}
 
 .getit *, 
 .products * {
@@ -262,4 +266,8 @@ dl dt {
 }
 dl dd {
 	padding-left: 1rem;
+}
+
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
